--- a/src/styles/components/_BookList.scss
+++ b/src/styles/components/_BookList.scss
@@ -5,7 +5,7 @@
     font-size: 3.2rem;
     font-weight: 500;
     padding: 12px 0px;
-    border-bottom: 2px solid #000;
+    border-bottom: 3px solid #000;
     margin-bottom: 2.8rem;
   }
   ol{
